deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medas-financial-reporting
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8501
  selector:
    app: medas-financial-reporting
