deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medas-financial-reporting
  namespace: user-paleo
spec:
  ingressClassName: onyxia
  tls:
    - hosts:
        - user-paleo-sports.user.lab.sspcloud.fr
  rules:
    - host: user-paleo-sports.user.lab.sspcloud.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: medas-financial-reporting
                port:
                  number: 80
